fix: adjust z-index

--- a/src/plugins/april-fool-2023/style.css
+++ b/src/plugins/april-fool-2023/style.css
@@ -4,6 +4,7 @@ pet {
   left: 3em;
   bottom: 3em;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  z-index: 10;
 }
 
 :is(pet, pet *) {
